--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
 asgiref==3.7.2
+blinker==1.6.3
+click==8.1.7
+colorama==0.4.6
+coverage==7.3.2
 Django==4.2.6
+django-countries==7.5.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 Pillow==10.0.1
+six==1.16.0
 sqlparse==0.4.4
+typing_extensions==4.8.0
 tzdata==2023.3
+Werkzeug==3.0.0
